# Cloud_Projects

./: README.md
00_GCP_Projects/01_GCP_ETL_Stream_CryptoData/: README.md
00_GCP_Projects/02_GCP_ETL_Airflow_CryptoData/: .gitignore
00_GCP_Projects/02_GCP_ETL_Airflow_CryptoData/dags/: 01_ETLWeatherPrint.py  03_ETLWeatherPostgresAndPrint.py  transformer.py
00_GCP_Projects/02_GCP_ETL_Crypto_Airflow/: .gitignore  README.md  docker-compose.yml
00_GCP_Projects/02_GCP_ETL_Crypto_Airflow/dags/: 00_ETLWeatherPrintAirflow2.py  02_ETLWeatherPostgres.py  SimpleHTTPOperator.py
00_GCP_Projects/03_GCP_ETL_Mage/: README.md
00_GCP_Projects/04_GCP_Document_Classification/: requirements.txt
00_GCP_Projects/04_GCP_Document_Classification/app/: unzip_document.py
00_GCP_Projects/04_GCP_Document_Classification/assets/: gcp_document_classification.excalidraw
00_GCP_Projects/05_GCP_Document_Streaming/: .gitignore  docker-compose.yml  notes.sh  requirements.txt
00_GCP_Projects/06_GCP_Document_OCR/document_ocr/: README.md  pyproject.toml
00_GCP_Projects/06_GCP_Document_OCR/document_ocr/OK/: OK_241107_1056_test_document.txt  OK_241107_1105_test_document.txt
00_GCP_Projects/06_GCP_Document_OCR/document_ocr/document_ocr/: list_processors.py  process_documents.py  send_process_request.py
01_AWS_Projects/00_AWS_S3_DynamoDB_Redshift_Lambda_Kinesis_PowerBI/: 01_Client.ipynb  02_Connect.ipynb  03_Buffer.ipynb  04_Process.ipynb  05_Storage.ipynb  06_Visualize.ipynb
01_AWS_Projects/01_AWS_ETL_S3_RDS_API/: Bloc_1_KAYAK.ipynb  df_city.csv  df_hotels.csv  yelp_results.csv
(+41 files in other folders)
